# AutoDPDCalc

./: .gitignore  pyproject.toml
sample/: ANGLS  BONDS  COORD
src/: autocalc.py  avtocalc.py  calc.py  folder_digger.py
tests/: test_autocalc.py  test_calc.py
