[tool.poetry]
name = "avtocalc"
version = "0.1.0"
description = "Avtomatize DPD calculations"
authors = ["Ivan Mikhailov, Pavel Semishin, Serafim <mikhailov.ivan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.1"
pytest = "^7.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
